--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "echarts": "^3.5.4",
     "request": "^2.72.0",
     "tough-cookie": "^2.3.2",
+    "tween.js": "^16.6.0",
     "vue": "^2.2.6",
     "vue-resource": "^1.2.0",
     "vuex": "^2.1.2"
